--- a/src/menu.html
+++ b/src/menu.html
@@ -13,6 +13,7 @@
 	</div>
 	<div class="\{mark.btn.group\}">
 		<button type="button" class="\{mark.btn.item\}" data-action-click="changeCellTypeTo(td)"><!-- BEGIN mark.icon.td:empty -->td<!-- END mark.icon.td:empty --><!-- BEGIN mark.icon.td:exist --><i class="\{mark.icon.td\}"></i><!-- END mark.icon.td:exist --></button><button type="button" class="\{mark.btn.item\}" data-action-click="changeCellTypeTo(th)"><!-- BEGIN mark.icon.th:empty -->th<!-- END mark.icon.th:empty --><!-- BEGIN mark.icon.th:exist --><i class="\{mark.icon.th\}"></i><!-- END mark.icon.th:exist --></button>
+		<button type="button" class="\{mark.btn.item\}" data-action-click="changeCellToBlank()"><!-- BEGIN mark.icon.td:empty -->Blank<!-- END mark.icon.td:empty --><!-- BEGIN mark.icon.td:exist --><i class="\{mark.icon.td\}"></i><!-- END mark.icon.td:exist --></button>
 	</div>
 	<div class="\{mark.btn.group\}">
 		<button type="button" class="\{mark.btn.item\}" data-action-click="align(left)"><i class="\{mark.icon.alignLeft\}"></i></button><button type="button" class="\{mark.btn.item\}" data-action-click="align(center)"><i class="\{mark.icon.alignCenter\}"></i></button><button type="button" class="\{mark.btn.item\}" data-action-click="align(right)"><i class="\{mark.icon.alignRight\}"></i></button>
